--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,11 @@
-WORDPRESS_VERSION=4.9.8
-PHP_VERSION=7.2
 MYSQL_VERSION=5.7
+NODE_VERSION=8.9.4
+PHP_VERSION=7.2
+WORDPRESS_VERSION=4.9.8
+
+# WORDPRESS
+WORDPRESS_VIRTUAL_HOST=wordpress.local
 PLUGINS_DIR=
+
+# GIT
+GIT_BRANCH=release/M18.18
